<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dip"
    android:background="@drawable/grille_sudoku_floute">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textSize="14sp"
        android:text="@string/producers"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/container_scroll_view_menu"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/first_sentence">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="21sp"
                android:text= "@string/first_sentence" />
            </FrameLayout>
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_sentence"
                android:id="@+id/introduction">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/introduction"/>
            </FrameLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/introduction"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical|center_horizontal|center"
                android:id="@+id/buttons_layout">

                <Button
                    android:id="@+id/portraitView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="20dip"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/portraitButtonText"
                    android:textSize="18sp" >
                </Button>


            <Space
                android:layout_width="wrap_content"
                android:layout_height="3dip"
                android:id="@+id/space_between_buttons"
                android:layout_below="@id/portraitView"
                android:layout_margin="26sp">
            </Space>


                <Button
                    android:id="@+id/landscapeView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dip"
                    android:layout_gravity="center"
                    android:layout_below="@id/space_between_buttons"
                    android:text="@string/landscapeButtonText"
                    android:textSize="18sp" >
                </Button>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>



